<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.trag.quartierlatin.prise.EditGuestActivity"
    android:focusableInTouchMode="true">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/linrlay_guest_editor_form">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtx_seatrow"
            android:hint="@string/editguest_seatrow"
            android:inputType="text"
            style="@style/InputSet"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtx_seatno"
            android:hint="@string/editguest_seatno"
            android:inputType="number"

            style="@style/InputSet"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtx_guestname"
            android:hint="@string/editguest_guestname"
            android:inputType="text"
            style="@style/InputSet"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtx_guestcorp"
            android:hint="@string/editguest_guestcorp"
            android:inputType="text"
            style="@style/InputSet"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtx_guestposition"
            android:hint="@string/editguest_guestposition"
            android:inputType="text"
            style="@style/InputSet"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtx_award"
            android:hint="@string/editguest_award"
            android:inputType="text"
            style="@style/InputSet"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtx_awardno"
            android:hint="@string/editguest_awardno"
            android:inputType="number"
            style="@style/InputSet"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_submit"
            android:id="@+id/btnSubmit"
            android:onClick="submitEditGuest"/>
    </LinearLayout>
</ScrollView>
</RelativeLayout>
