<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.trag.quartierlatin.prise.InsertGuestActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linrlay_guest_insert_form">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtx_seatrow"
                android:hint="@string/editguest_seatrow"
                android:inputType="text"
                style="@style/InputSet"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtx_seatno"
                android:hint="@string/editguest_seatno"
                android:inputType="number"
                style="@style/InputSet"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtx_guestname"
                android:hint="@string/editguest_guestname"
                android:inputType="text"
                style="@style/InputSet"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtx_guestcorp"
                android:hint="@string/editguest_guestcorp"
                android:inputType="text"
                style="@style/InputSet"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtx_guestposition"
                android:hint="@string/editguest_guestposition"
                android:inputType="text"
                style="@style/InputSet"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtx_award"
                android:hint="@string/editguest_award"
                android:inputType="text"
                style="@style/InputSet"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtx_awardno"
                android:hint="@string/editguest_awardno"
                android:inputType="number"
                style="@style/InputSet"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linrlay_spnr_set">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/insertguest_txt_statusspnr"
                    android:id="@+id/txt_status"
                    android:textSize="18dp"
                    android:layout_centerVertical="true"/>
                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/spnr_status"
                    android:layout_toEndOf="@+id/txt_status">
                </Spinner>
            </RelativeLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_submit"
                android:id="@+id/btnSubmit"
                android:onClick="submitInsertGuest"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_reset"
                android:id="@+id/btnReset"
                android:onClick="resetGuest"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
