<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.trag.quartierlatin.prise.InsertEventActivity">

    <LinearLayout
        android:id="@+id/linrlay_event_formset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtx_eventname"
            android:inputType="textShortMessage"
            android:hint="@string/insertevent_txt_titlehint"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edtx_eventdesc"
            android:hint="@string/insertevent_txt_deschint"
            android:inputType="textMultiLine"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnSubmit"
            android:text="@string/submit"
            android:onClick="submitThisEvent"/>

    </LinearLayout>
</RelativeLayout>
