<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linray_sorting_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/txt_sorting_sort_type"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbtn_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_sorting_sort_type_desc"
                android:padding="5dp"
                android:layout_weight="1"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbtn_asc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_sorting_sort_type_asc"
                android:padding="5dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linray_sorting_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linray_sorting_type"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/txt_sorting_sort_by"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/spnr_sorting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></Spinner>
    </LinearLayout>

</RelativeLayout>